# dddml

./: .gitignore  README.md  dddml.opam  dune-project
model/lib/: account.ml  account.mli  account_sig.ml  accountid.ml  common.ml  dune  id.ml  tvalidator.ml
