; name = name of the supermodule that will wrap all source files as submodules
; public_name = name of the library for ocamlfind and opam

(library
 (name dddml_model)
 (public_name dddml.model)
 (libraries base calendar unix str validator)
 (synopsis "This is a short description of the model library."))